...

    <LinearLayout
        android:id="@+id/cardFieldsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/nameLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/cardHolderNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/emailLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:nextFocusDown="@+id/creditCardNumberEditText"
                            android:padding="6sp" />
                    </LinearLayout>
...
                                android:inputType="numberDecimal"
                                android:maxLength="19"
                                android:nextFocusDown="@+id/expDateEditText" />

                            <ImageView
...

                <LinearLayout
                    android:id="@+id/expLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:nextFocusDown="@+id/cvvEditText"
                        android:paddingBottom="5sp"
                        android:paddingLeft="1sp"
...

                <LinearLayout
                    android:id="@+id/cvvLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/billingAddressLineEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <LinearLayout
                        android:id="@+id/zipFieldLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                        <EditText
                            android:id="@+id/zipEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
...

                        <EditText
                            android:id="@+id/billingStateEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
...
                            android:inputType="textPostalAddress"
                            android:maxLength="50"
                            android:nextFocusDown="@+id/billingCityEditText"
                            android:padding="1sp" />

...

        <Button
            android:id="@+id/buyNowButton"
            android:layout_width="match_parent"
            android:layout_height="60sp"
...
