...
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/fraglyout"
            android:name="com.bluesnap.androidapi.views.BluesnapFragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/bluesnap_checkout_creditcard" />


...
